# jira-sync

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  README.md  main.py  pyproject.toml
infrastructure/: cloudformation.yaml  deploy.sh
scripts/: check-sync-status.py  test-transitions.py  test-webhook.py
src/: __init__.py  config.py  jira_client.py  lambda_handlers.py  models.py  storage.py  sync_engine.py
